link spacing in teams fixed

--- a/src/css/TeamCss.module.css
+++ b/src/css/TeamCss.module.css
@@ -6,13 +6,14 @@
     text-align: center;
     margin-top: 70px;
 }
+
 button {
     align-items: center;
     background-color: transparent;
     color: #fff;
     cursor: pointer;
     display: flex;
-    font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem;
     font-weight: 700;
     line-height: 1.5;
@@ -21,22 +22,23 @@ button {
     outline: 0;
     border: 0;
     padding: 1rem;
-  }
-  
-  button:before {
+}
+
+button:before {
     background-color: #fff;
     content: "";
     display: inline-block;
     height: 1px;
     margin-right: 10px;
-    transition: all .42s cubic-bezier(.25,.8,.25,1);
+    transition: all .42s cubic-bezier(.25, .8, .25, 1);
     width: 0;
-  }
-  
-  button:hover:before {
+}
+
+button:hover:before {
     background-color: #fff;
     width: 3rem;
-  }
+}
+
 .text_blue {
     color: #3282B8;
 }
@@ -83,7 +85,7 @@ img {
 
 }
 
-.imageContainer>div{
+.imageContainer>div {
     position: absolute;
     top: 0;
     left: 0;
@@ -180,8 +182,8 @@ p {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 60%;
-    width: 15%;
+    height: 100%;
+    width: 20%;
     /* left: 100%; */
     opacity: 0;
     justify-content: space-around;
@@ -209,7 +211,7 @@ p {
 @keyframes animation1 {
     100% {
         opacity: 1;
-        transform: translateX(570%);
+        transform: translateX(400%);
     }
 }
 
